--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "npx -y tsx main.ts"
+  },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/ws": "^8.18.1",
